--- a/classification_mnist.ipynb
+++ b/classification_mnist.ipynb
@@ -20,7 +20,7 @@
         "id": "jYysdyb-CaWM"
       },
       "source": [
-        "# Classify images using custom activation functions"
+        "# Classify images using custom activation functions (MNIST dataset)"
       ]
     },
     {
@@ -38,7 +38,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "dzLKpmZICaWN",
-        "outputId": "d164d577-ea52-4f21-f2bb-fbf6aa9c0673",
+        "outputId": "de847ca4-a444-44d1-92c2-5967f203cf28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -55,7 +55,7 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,10 +92,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "7MqDQO0KCaWS",
-        "outputId": "2ad2e0ac-0ce8-4541-c48a-95d69d63e1b4",
+        "outputId": "8d5db82d-3641-4c76-d597-a5a2fdff48d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 153
+          "height": 156
         }
       },
       "source": [
@@ -103,7 +103,7 @@
         "\n",
         "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
